--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laramall/aliyun-dysms",
+    "name": "tongseo/aliyun-dysms",
     "type": "package",
     "description": "新版阿里大于短信接口 for laravel5.5+",
     "keywords": ["阿里大于", "laravel5.5", "aliyun dysms sdk"],
