--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "tongseo/aliyun-dysms",
+    "name": "tongv/aliyun-dysms",
     "type": "package",
     "description": "新版阿里大于短信接口 for laravel5.5+",
     "keywords": ["阿里大于", "laravel5.5", "aliyun dysms sdk"],
-    "homepage": "https://github.com/bluetoothswh/AlidySms.git",
+    "homepage": "https://github.com/tongv/AlidySms.git",
     "license": "MIT",
     "authors": [
         {
