--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,9 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "David Sun",
-            "email": "bluetooth_swh@163.com",
-            "homepage": "https://larashuo.com",
+            "name": "ZhangTong",
+            "email": "44472@163.com",
+            "homepage": "https://gbk.pw",
             "role": "Developer"
         }
     ],
