--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         }
     ],
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.0",
+        "tongv/aliyun-dysms": "^v1.1"
     },
     "autoload": {
         "psr-4": {
